# lnaddrd

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml  flake.nix  justfile  result
.github/workflows/: docker.yml
migrations/01_initial_setup/: down.sql  up.sql
src/: api.rs  config.rs  lib.rs  main.rs  ui.rs
src/repository/: mod.rs  pg.rs
src/service/: direct.rs  mod.rs
