[package]
name = "lnaddrd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"]}
diesel = { version = "2.2", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2.0"
hickory-server = "0.24.0"
hickory-proto = "0.24.0"
lnurl-rs = { version = "0.9.0", default-features = false, features = [ "async-https-rustls" ] }
reqwest = { version = "0.12", default-features = false }
rand = "0.9"
serde = "1"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
