[package]
name = "lnaddrd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.7"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"]}
diesel = { version = "2.2", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2.0"
lnurl-rs = { version = "0.9.0", default-features = false, features = [ "async-https-rustls" ] }
maud = "0.27.0"
qrcode = { version = "0.14.1", features = ["svg"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
serde = "1"
serde_json = "1.0.140"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.19"
